--- a/src/pages/Inbox.module.css
+++ b/src/pages/Inbox.module.css
@@ -51,3 +51,17 @@
    
      border-radius: 50%; 
 }
+.btnDelete{
+    padding: 1rem;
+    width: 120px;
+    height: 20px;
+    text-align: center;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: red;
+    color: white;
+    border: none;
+    margin-top:-4px ;
+    border-radius: 10px;
+}
