--- a/src/pages/Home.module.css
+++ b/src/pages/Home.module.css
@@ -21,6 +21,8 @@
     cursor: pointer;  
 }
 .sideBar ul li{
+    display: flex;
+    gap: 1rem;
     margin-bottom: 1rem;
     font-size: 20px;
 }
@@ -32,4 +34,14 @@
     display: grid;
     grid-template-columns: 100px 1fr;
     /* gap: 2rem; */
+}
+.count{
+    display: block;
+    width: 25px;
+    height: 25px;
+    font-size: 15px;
+    text-align: center;
+    background-color: aqua;
+   
+    border-radius: 50%;
 }
